[tool.poetry]
name = "valentine"
version = "0.1.0"
description = ""
authors = ["Hean Macharia <your-email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.0"
gunicorn = "^20.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"